fix overlaping elementson homepage

--- a/src/components/footerBanner/FooterBanner.module.css
+++ b/src/components/footerBanner/FooterBanner.module.css
@@ -10,7 +10,6 @@
   margin-left: 20px;
   margin-right: 20px;
   position: relative;
-  z-index: -1;
 
   display: flex;
   justify-content: space-between;
