--- a/src/components/products/Products.module.css
+++ b/src/components/products/Products.module.css
@@ -29,8 +29,6 @@
   color: #324d67;
   opacity: 0.8;
   font-weight: 100;
-  position: relative;
-  z-index: -1;
 }
 
 .products-container {
