--- a/src/components/sideBar/SideBar.module.css
+++ b/src/components/sideBar/SideBar.module.css
@@ -1,4 +1,5 @@
 .side-bar {
+  position: relative;
   z-index: 1;
 }
 
